--- a/assets/sample.css
+++ b/assets/sample.css
@@ -142,7 +142,7 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Microsoft JhengHei", sans-serif;
-  background-color: #242633;
+  background-color: #252942;
   color: #000000;
 }
 
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
   text-align:center;
 }
 
-#card_2 , #card_1 {
+#card_2, #card_1 {
   margin-top:0;
   margin-right:auto;
   margin-bottom:0;
@@ -214,7 +214,6 @@ h1, h2, h3, h4, h5, h6 {
   width: 50%;
   display:inline-block
 }
-
 
 h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; font-weight: bold;}
 h2 { font-size: 2.5rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem; font-weight: bold;}
@@ -394,11 +393,13 @@ li {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 table {
   border-collapse: collapse;
+  margin-left: auto;
+  margin-right: auto;
 }
 th:not(.CalendarDay),
 td:not(.CalendarDay) {
-  padding: 12px 15px;
-  text-align: left;
+  padding: 20px 15px;
+  text-align: center;
   border-bottom: 1px solid #E1E1E1; }
 th:first-child:not(.CalendarDay),
 td:first-child:not(.CalendarDay) {
