--- a/assets/sample.css
+++ b/assets/sample.css
@@ -141,10 +141,41 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Microsoft JhengHei", sans-serif;
-  background-color: #252942;
-  color: #000000;
+  font-family: "Arial", "Microsoft JhengHei", sans-serif;
+  background-color: #00071c;
+  color: #ffffff;
 }
+
+
+/* Typography
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+h1, h2, h3, h4, h5, h6 {
+  margin-top: 20px;
+  margin-bottom: 0;
+  font-weight: 300; 
+  color: white;
+  text-align:center;
+}
+
+#card_2, #card_1 {
+  margin-top:0;
+  margin-right:auto;
+  margin-bottom:0;
+  margin-left:auto;
+  text-align:center;
+  width: 50%;
+  display:inline-block
+}
+
+h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; font-weight: bold;}
+h2 { font-size: 2.5rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem; font-weight: bold;}
+h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
+h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
+h5 { font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
+h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
+
+p {
+  margin-top: 0; }
 
 /* Dropdown
 ----------------------------------------------*/
@@ -195,37 +226,6 @@ body {
 .Select.is-focused:not(.is-open) > .Select-control {
   border-color: #91dfd2 !important;
 }
-/* Typography
-–––––––––––––––––––––––––––––––––––––––––––––––––– */
-h1, h2, h3, h4, h5, h6 {
-  margin-top: 20px;
-  margin-bottom: 0;
-  font-weight: 300; 
-  color: white;
-  text-align:center;
-}
-
-#card_2, #card_1 {
-  margin-top:0;
-  margin-right:auto;
-  margin-bottom:0;
-  margin-left:auto;
-  text-align:center;
-  width: 50%;
-  display:inline-block
-}
-
-h1 { font-size: 4.5rem; line-height: 1.2;  letter-spacing: -.1rem; margin-bottom: 2rem; font-weight: bold;}
-h2 { font-size: 2.5rem; line-height: 1.25; letter-spacing: -.1rem; margin-bottom: 1.8rem; margin-top: 1.8rem; font-weight: bold;}
-h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; margin-bottom: 1.5rem; margin-top: 1.5rem;}
-h4 { font-size: 2.6rem; line-height: 1.35; letter-spacing: -.08rem; margin-bottom: 1.2rem; margin-top: 1.2rem;}
-h5 { font-size: 2.2rem; line-height: 1.5;  letter-spacing: -.05rem; margin-bottom: 0.6rem; margin-top: 0.6rem;}
-h6 { font-size: 2.0rem; line-height: 1.6;  letter-spacing: 0; margin-bottom: 0.75rem; margin-top: 0.75rem;}
-
-p {
-  margin-top: 0; }
-
-
 /* Blockquotes
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 blockquote {
