--- a/assets/sample.css
+++ b/assets/sample.css
@@ -142,8 +142,8 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Arial", "Microsoft JhengHei", sans-serif;
-  background-color: #00071c;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #000000;
 }
 
 
@@ -153,7 +153,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 20px;
   margin-bottom: 0;
   font-weight: 300; 
-  color: white;
+  color: #424242;
   text-align:center;
 }
 
@@ -180,51 +180,51 @@ p {
 /* Dropdown
 ----------------------------------------------*/
 
-/*Dropdown items*/
+/*Dropdown items下拉框底色*/
 .Select-control, .Select-multi-value-wrapper, .Select-menu-outer div {
-  background-color: #242633;
+  background-color: #ffffff;
 }
 
-/*Dropdown items*/
+/*Dropdown items下拉文字顏色*/
 .Select-control, .Select, .Select-value-label, .Select-clear-zone {
-  color: white;
+  color: black;
 }
 
 
 /*Dropdown items*/
 .Select-menu-outer {
-  background-color: #242633;
-  border: 1px solid darkgray !important;
+  background-color: #4e59a3;
+  border: 1px solid darkgray !important;  /*下拉框*/
 }
 
-/*Dropdown items*/
+/*Dropdown items下拉選單中選擇的反色*/
 .Select-menu-outer div:hover {
-  background-color: rgba(0, 0, 0, 0.5) !important;
+  background-color: #daf3f5 !important;
   cursor: pointer;
 }
 
-/*Dropdown arrow + delete button*/
+/*Dropdown arrow + delete button [x]按鈕*/
 .Select-control, .Select-control > span {
   color: white;
-  background: #242633 !important;
+  background: #ffffff !important;
 }
 
-/*Placeholder*/
+/*Placeholder 選擇的項目*/
 .Select.has-value.Select--single > .Select-control .Select-value .Select-value-label, .Select.has-value.is-pseudo-focused.Select--single > .Select-control .Select-value .Select-value-label {
-  color: white !important;
+  color: black !important;
 }
 
-/*Placeholder*/
+/*Placeholder 主框*/
 .Select--single > .Select-control .Select-value, .Select-placeholder {
   /*border: 1px solid darkgray;*/
   border-radius: 4px;
-  background-color: #242633;
+  background-color: #ffffff;
   cursor: pointer;
 }
 
 
 .Select.is-focused:not(.is-open) > .Select-control {
-  border-color: #91dfd2 !important;
+  border-color: #9da1bd !important;
 }
 /* Blockquotes
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
@@ -400,7 +400,7 @@ th:not(.CalendarDay),
 td:not(.CalendarDay) {
   padding: 20px 15px;
   text-align: center;
-  border-bottom: 1px solid #E1E1E1; }
+  border-bottom: 1px solid #66c5cc; }
 th:first-child:not(.CalendarDay),
 td:first-child:not(.CalendarDay) {
   padding-left: 0; }
